# server

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PRIVACY.md  README.md  SECURITY.md  agents.md  api_gateway_spec.md  buf.gen.yaml  config.yaml  go.mod  go.sum  open-nucleus-auth-service-spec-v1.md  open-nucleus-patient-service-spec-v1.md  open-nucleus-sentinel-agent-spec.md  open-nucleus-sync-service-spec-v1.md
.claude/: claude.md
.github/workflows/: ci.yml
cmd/gateway/: main.go
cmd/nucleus/: main.go
cmd/seed/: main.go
cmd/smoke/: main.go
internal/config/: config.go
open-nucleus-app/: analysis_options.yaml  index.html  package.json  pnpm-lock.yaml  pubspec.yaml
schemas/: allergy_intolerance.json  condition.json  encounter.json  immunization.json  medication_request.json  observation.json  patient.json  procedure.json
scripts/: create-topic.go  demo-full.sh  demo.sh
services/sentinel/: config.yaml  proto_gen.sh  pyproject.toml  requirements.txt
services/sentinel/src/sentinel/: config.py  fhir_output.py  main.py  sync_subscriber.py
services/sentinel/src/sentinel/agent/: interfaces.py  stub.py
services/sentinel/src/sentinel/http/: health_server.py
services/sentinel/src/sentinel/ollama/: sidecar.py
services/sentinel/src/sentinel/server/: converters.py  servicer.py
services/sentinel/src/sentinel/store/: alert_store.py  inventory_store.py  models.py  seed.py
services/sentinel/tests/: conftest.py  test_alert_store.py  test_config.py  test_fhir_output.py  test_grpc_servicer.py  test_health_server.py  test_inventory_store.py
(+451 files in other folders)
